[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/enemy/enemy.png" type="Texture" id=1]
[ext_resource path="res://src/game/entities/enemies/Minion.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 43 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35.5, 46 )

[node name="Minion" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( 0.5, 0 )
shape = SubResource( 2 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
